--- a/carrito.html
+++ b/carrito.html
@@ -9,7 +9,13 @@
 </head>
 <body>
     <header>
-
+        <nav>
+            <a href="./index.html"><img src="../multimedia_ funkoshop/multimedia/branding/logo_light_horizontal.svg" alt="logoFunkoShop"></a>
+            <a href="./shop.html">SHOP</a>
+            <a href="">CONTACTO</a>
+            <a href="">LOGIN</a>
+            <a href="./carrito.html"><img src="../multimedia_ funkoshop/multimedia/icons/cart-icon.svg" alt="cart"></a>
+        </nav>
     </header>
     <main>
 
