--- a/index.html
+++ b/index.html
@@ -4,17 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME</title>
+<!--CSS-->    
     <link rel="stylesheet" href="./styles/general.css">
     <link rel="stylesheet" href="./styles/index.css">
+<!--GoogleFonts-->    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
         <nav>
-            <a href="./index.html"></a>
+            <a href="./index.html"><img src="../multimedia_ funkoshop/multimedia/branding/logo_light_horizontal.svg" alt="logoFunkoShop"></a>
             <a href="./shop.html">SHOP</a>
             <a href="">CONTACTO</a>
             <a href="">LOGIN</a>
-            <a href="./carrito.html"></a>
+            <a href="./carrito.html"><img src="../multimedia_ funkoshop/multimedia/icons/cart-icon.svg" alt="cart"></a>
         </nav>
     </header>
     <section id="banner">
@@ -23,24 +29,43 @@
     <main>
     <section>
         <article>
-            <h2></h2>
+            <section>
+            <h2>STAR WARS & THE MANDALORIAN</h2>
             <p></p>
-            <img src="" alt="">
+            <a href="">VER COLECCION</a>
+            </section>
+            <img src="../multimedia_ funkoshop/multimedia/star-wars/baby-yoda-1.webp" alt="">
         </article>
         <article>
-            <h2></h2>
+            <section>
+            <h2>POKEMON INDIGO</h2>
             <p></p>
-            <img src="" alt="">
+            <a href="">VER COLECCION</a>
+            </section>
+            <section>
+            <img src="../multimedia_ funkoshop/multimedia/pokemon/dragonite-1.webp" alt="">
+            </section>
         </article>
         <article>
-            <h2></h2>
-            <p></p>
-            <img src="" alt="">
+            <section>
+            <h2>HARRY POTTER</h2>
+            <p>Revive los recuerdos de una saga llena de magia y encanto</p>
+            <a href="">VER COLECCION</a>
+            </section>
+            <img src="../multimedia_ funkoshop/multimedia/harry-potter/snape-patronus-1.webp " alt="">
         </article>
     </section>
     </main>
     <footer>
-
+        <nav>
+            <a href="./shop.html">SHOP</a>
+            <a href="">INGRESAR</a>  
+            <a href="">CONTACTO</a>
+        </nav>
+        <img src="../multimedia_ funkoshop/multimedia/branding/isotype.svg" alt="">
+        <section>
+            <p>All rights reserved 2023 - Funkoshop &copy</p>
+        </section>
     </footer>
 </body>
 </html>
